2008-08-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl (set_status/1): Accept an empty string
	or an empty binary as the status. In this case, the status element is
	removed.

	* src/core/exmpp_jid.erl (make_jid/3): Accept an empty string as the
	resource, to ease integration with Ejabberd.

	* configure.ac: Rewrite again the way Erlang and its components are
	detected. It's now possible to use --with-erlang to indicate an
	alternate Erlang environment; much easier than filling ERL and ERLC
	variables (EJABP-3). Regarding cross-compilation, --with-erl_interface
	was replaced by --with-host-erlang. This new option should point to
	the Erlang environment used by the future host. The configure script
	will use the ERTS and erl_interface found there. Checks for the need
	of any workarounds will also use the host Erlang. While here, fix a
	bug with --enable-escaping-using-cdata: when not specified, it
	disabled --enable-http_base_64 instead.

	* trunk/c_src/Makefile.am: Use the new ERLANG_ERTS_DIR variable.

	* README: Write more complete instructions on how to build and install
	Exmpp.

2008-08-20  Jérôme Sautret  <jerome.sautret@process-one.net>

	* src/core/exmpp_presence.erl (presence/2): Add presence/2 helper
	function in the API to create a generic presence packet.

	* README: Fix path to examples.

2008-08-14  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_iq.erl (get_result/1): Fix a bug where a text node
	could be returned as a result.

2008-08-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_xmpp.hrl, src/core/exmpp_stanza.erl,
	src/core/exmpp_iq.erl: Add #iq record support. This record ressembles
	a lot to the one in ejabberd. His main purpose is matching, in
	function clause espcecially. Many functions in exmpp_stanza and
	exmpp_iq accept this new record in place of the common #xmlel but not
	all; check the documentation. Also several bugs were fixed, thanks to